# NOVA-llm-based-desktop-assistent

./: .gitignore  README.md  debug_desktop.py  pyproject.toml  run_silent.vbs  setup.bat  start_nova.bat  stop_nova.bat  test_caffeine.py  test_find_text.py
browser_extension/: background.js  manifest.json  popup.html  popup.js
firefox_extension/: background.js  content_agent.js  manifest.json
src/nova/: main.py
src/nova/agents/: researcher.py  system.py  telegram.py
src/nova/core/: brain.py  browser_host.py  memory.py  native_manifest.json  voice.py  wake_word.py
src/nova/features/: browser_control.py  clipboard.py  zombie_reaper.py
src/nova/features/files/: finder.py
src/nova/scripts/: list_audio_devices.py  package_extension.py
src/nova/utils/: env_check.py  ui.py
src/nova_linux/: main.py
src/nova_linux/agents/: system.py  telegram.py
src/nova_linux/core/: brain.py  browser_host.py  voice.py  wake_word.py
src/nova_linux/docs/: LINUX_INSTALLATION.md
src/nova_linux/features/: focus_mode.py
src/nova_linux/features/files/: finder.py  tracker.py
src/nova_linux/scripts/: register_native_host.py
